# fridge-door

./: .env  .gitignore  Cargo.toml  Rocket.toml  fridge-door.service
migrations/: 20230115222344_create-messages-table.sql
src/: db.rs  main.rs
