[package]
name = "fridge-door"
version = "0.1.0"
edition = "2021"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "secrets"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.sqlx]
version = "0.5.13"
features = ["macros", "offline", "migrate", "chrono"]

[dependencies.chrono]
version = "0.4.23"
features = ["serde"]